# pit-38-usd-schwab-calculator

./: .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  app.py  demo.py  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  summarize.py
.devcontainer/: Dockerfile  devcontainer.json  startup.sh
charles_schwab/: __init__.py  config.yaml
pit38/: captures.py  config.py  income.py  preprocessing.py  schwab.py  state.py  stock.py  summarizer.py  utils.py
pit_38_usd_schwab_calculator/: __init__.py  config.py  config_store.py  pit_38_usd_schwab_calculator.py  utils.py
polish_pit_calculator/: coinbase.py  config.py  ib.py  manual.py  optimizer.py  raw.py  revolut.py  schwab.py  utils.py
scripts/: calculate_polish_pit.py  calculate_polish_pit_and_optimize_savings_for_tax.py
templates/: app.html
