[tool.poetry]
name = "pit-38-usd-schwab-calculator"
version = "0.1.0"
description = "Tool for summarizing taxes for PIT-38 given a Charles Schwab CSV file with full history of USD transactions."
authors = ["Adam Rajfer <adam.rajfer@gmail.com>"]
packages = [
    { include = "pit38" }
]

[tool.poetry.dependencies]
python = "^3.12"
ansi2html = "*"
flask = "*"
pandas = "*"
yfinance = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_length = 79

[tool.isort]
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true

[tool.mypy]
ignore_missing_imports = true

[tool.autoflake]
remove_all_unused_imports = true
in_place = true
remove_unused_variables = true
