[tool.poetry]
name = "polish-pit-calculator"
version = "1.0.0"
description = "Tool for generating content for Polish PIT forms."
authors = ["Adam Rajfer <adam.rajfer@gmail.com>"]
packages = [
    { include = "polish_pit_calculator" }
]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "*"
scipy = "*"
streamlit = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.isort]
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true

[tool.mypy]
ignore_missing_imports = true
explicit_package_bases = true

[tool.autoflake]
remove_all_unused_imports = true
in_place = true
remove_unused_variables = true
